@startuml StateMachine

[*] -d-> Init : Power On
Init --->  Update : [supply Voltage >= Param.minVoltage]
Init --> LowBattery : [supply Voltage < Param.minVoltage]


Update -> Sleep : Update done
Sleep -> LowBattery : Voltage < minVoltage
Sleep-l-> Update : Resume
Update -d-> Error : Error occured
Sleep -d-> Error : Error occured

Error --> [*] : halt
LowBattery -d-> Error: Error occured
LowBattery -l-> Update: Voltage > minVoltage
Init: /enter initSystem()
Init: /process determineNextState()

Error: /enter DisplayErrImage()
Error: /process halt()

Update: /process displayNextImage()

Sleep: /enter suspendDevices()
Sleep: /process sleep( Wakeup time period)
Sleep: /leave resumeDevices()

LowBattery: /entry DisplayLowBatImage()
LowBattery: /process sleepAndMonitorVoltage()

@enduml